// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TooltipStyled /> should render the component with an unknown position 1`] = `
<div
  className="TooltipStyled-fwSOCa cITGZP"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with position bottom 1`] = `
<div
  className="TooltipStyled-fwSOCa gtjErN"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with position left 1`] = `
<div
  className="TooltipStyled-fwSOCa bdNGfu"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with position right 1`] = `
<div
  className="TooltipStyled-fwSOCa ePfseS"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with the default props 1`] = `
<div
  className="TooltipStyled-fwSOCa hjeyxv"
  content="The world Champion!"
>
  Corinthians!
</div>
`;
